# PDFRejuvenator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_COMMAND_LINE_HANDOFF.md  install_pdfrejuvenator.bat  process_pdf.bat  process_pdf_batch.bat  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: CORPUS_INTAKE_ARCHITECTURE.md  GITHUB_PUBLICATION_CHECKLIST.md  OUTPUT_GUIDE.md  PRIVATE_OCR_RECORDS.md  PRIVATE_TABLE_RECORDS.md  PRIVATE_WORKSPACE_ARCHITECTURE.md  PUBLICATION_GUIDE.md  SEARCHABILITY_VALIDATION_PLAN.md  VALIDATION_GUIDE.md  VECTOR_INDEX.md
pdfrejuvenator/: __init__.py  cli.py  corpus_intake.py  corpus_search.py  ocr_records.py  private_workspace.py  table_records.py  vector_index.py
requirements/: pdfrejuvenator_requirements.txt
scripts/: build_consolidated_review_output.py  build_full_book_review_packet.py  build_local_search_index.py  build_pdfrejuvenator_package.py  build_public_source_export.py  generate_public_sample_pdf.py  render_inkscape_visual_comparisons.py  rollout_chapter_table_cell_editability.py  run_full_book_rollout_chunks.py  run_pdf_batch.py  run_pdf_book.py  run_pdf_rejuvenation.py  scrub_public_export.py  search_local_index.py  validate_consolidated_review_output.py  validate_corpus_intake.py  validate_corpus_search.py  validate_ocr_records.py  validate_ocr_search.py  validate_pdfrejuvenator.py  validate_private_workspace.py  validate_searchability.py  validate_table_records.py  validate_vector_index.py
src/: doc_pipeline.py
(+1 files in other folders)
